--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
+    "@types/katex": "^0.16.7",
+    "@types/markdown-it": "^14.1.2",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -57,7 +59,9 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
+    "katex": "^0.16.21",
     "lucide-react": "^0.453.0",
+    "markdown-it": "^14.1.0",
     "memorystore": "^1.6.7",
     "openai": "^4.85.4",
     "passport": "^0.7.0",
